WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147697
[Frame flattening] Return early when child RenderView is not available.
https://bugs.webkit.org/show_bug.cgi?id=147697
Summary
[Frame flattening] Return early when child RenderView is not available.
alan
Reported
2015-08-05 15:24:52 PDT
ssia.
Attachments
Patch
(1.50 KB, patch)
2015-08-05 15:26 PDT
,
alan
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-08-05 15:26:02 PDT
Created
attachment 258305
[details]
Patch
alan
Comment 2
2015-08-05 15:39:21 PDT
Committed
r187994
: <
http://trac.webkit.org/changeset/187994
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug