[Frame flattening] Return early when child RenderView is not available. https://bugs.webkit.org/show_bug.cgi?id=147697

Reviewed by Simon Fraser.

No change in functionality.

* rendering/RenderFrameBase.cpp:
(WebCore::RenderFrameBase::peformLayoutWithFlattening):

Canonical link: https://commits.webkit.org/165779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187994 268f45cc-cd09-0410-ab3c-d52691b4dbfc